--- a/crud-angula/src/app/components/form/form.component.html
+++ b/crud-angula/src/app/components/form/form.component.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
             <div class="navbar-wrapper">
-                <a class="navbar-brand" href="javascript:;">Cadastar usuário</a>
+                <a class="navbar-brand" href="javascript:;">Cadastrar usuário</a>
             </div>
         </div>
     </nav>
@@ -16,23 +16,33 @@
                         <!-- INICIO Card Header -->
                         <div class="card-header card-header-primary">
                             <h4 class="card-title">Formulário</h4>
-                            <p class="card-category">Formulário de cadastro de usuario</p>
+                            <p class="card-category">Formulário de cadastro de usuário</p>
                         </div>
                         <!-- Final Card Header -->
                         <!-- INICIO form -->
                         <div class="card-body">
-                            <form>
+                            <form (ngSubmit)="create()">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="bmd-label-floating">Nome completo</label>
-                                            <input type="text" class="form-control">
+                                            <input
+                                                [formControl]="nome"
+                                                required
+                                                [(ngModel)]="usuarioRequest.nome" 
+                                                name="nome" 
+                                                type="text" 
+                                                class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="bmd-label-floating">CPF</label>
-                                            <input type="number" class="form-control">
+                                            <input 
+                                                [(ngModel)]="usuarioRequest.cpf" 
+                                                name="cpf" 
+                                                type="number" 
+                                                class="form-control">
                                         </div>
                                     </div>
                                 </div>
@@ -40,13 +50,22 @@
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="bmd-label-floating">Telefone</label>
-                                            <input type="text" class="form-control">
+                                            <input 
+                                                [(ngModel)]="usuarioRequest.telefone" 
+                                                name="telefone" 
+                                                type="text" 
+                                                class="form-control">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="bmd-label-floating">E-mail</label>
-                                            <input type="email" class="form-control">
+                                            <input 
+                                                [(ngModel)]="usuarioRequest.email" 
+                                                name="email" 
+                                                type="email" 
+                                                class="form-control" 
+                                                [ngModelOptions]="{standalone: true}">
                                         </div>
                                     </div>
                                 </div>
@@ -55,26 +74,11 @@
                                 <button type="submit" class="btn btn-primary pull-right">Salvar</button>
                                 <div class="clearfix"></div>
                             </form>
+                            <!-- <app-alerta [icon]="alertIcon" [text]="alertText" *ngIf="showAlert"></app-alerta> -->
                         </div>
                         <!-- Final form -->
                     </div>
                 </div>
-                <!-- <div class="col-md-4">
-                    <div class="card card-profile">
-                        <div class="card-avatar">
-                            <a href="javascript:;">
-                                <img class="img" src="../assets/img/avatar.png" alt="avatar" />
-                            </a>
-                        </div>
-                        <div class="card-body">
-                            <h6 class="card-category text-gray">Usuário</h6>
-                            <h4 class="card-title">Nome do Usuário</h4>
-                            <p class="card-description"> CPF</p>
-                            <p class="card-description"> Telefone</p>
-                            <p class="card-description"> Email</p>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
