Adicionar o update em usuarios

--- a/crud-angula/src/app/components/list/list.component.html
+++ b/crud-angula/src/app/components/list/list.component.html
@@ -45,7 +45,7 @@
                                             <td class="text-primary">{{ usuario.email }}</td>
                                             <td>
                                                 <div class="d-inline-flex">
-                                                    <a class="nav-link p-0 ml-6" routeLi routerLink="/profile" id="navbarDropdownMenuLink"
+                                                    <a class="nav-link p-0 ml-6" routeLi routerLink="/profile/{{usuario.id}}" id="navbarDropdownMenuLink"
                                                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                         <i class="material-icons">visibility</i>
                                                     </a>
